tests/reference/asr-test_append_type_mismatch-030e9c7.stderr
semantic error: Type mismatch in 'append', the types must be compatible
 --> tests/errors/test_append_type_mismatch.py:6:14
  |
6 |     l.append('a')
  |              ^^^ type mismatch (found: 'str', expected: 'i32')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
